# Wodify-Training

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  modelling.ipynb  scraping.py
src/dto/: __init__.py  main.py
