[tool.poetry]
name = "wodify-training"
version = "0.1.0"
description = ""
authors = ["Algernon Sampson <algiesampson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pyright = "^1.1.376"
ipykernel = "^6.29.5"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src/**/*.py"]
typeCheckingMode = "basic"

[tool.ruff]
include = ["src/**/*.py"]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002", "E501", "D212", "D203"  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    ]
fixable = ["ALL"]
unfixable = ["T20", "ERA001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
